# expense-management-ai

./: .env.example  .gitignore  CHANGELOG.md  README.md  compose.e2e.yaml  compose.yaml  ign Pocket Ledger as a professional finance product"  kills): add Hallmark UI audit"  s source review findings"
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initialize_database_infrastructure.py  0002_create_accounts_and_transactions.py  0003_create_ai_transaction_drafts.py  0004_create_budget_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  errors.py  factory.py  fake.py  ollama.py  providers.py  schemas.py
backend/app/application/: __init__.py  ai_history.py  ai_parse.py  ai_query.py  budgets.py  dashboard.py  exports.py  (+1 more)
backend/tests/: conftest.py  test_ai_budget_remaining_api.py  test_ai_confirm_api.py  test_ai_parse_api.py  test_ai_provider_factory.py  test_ai_query_spending_api.py  test_ai_spending_breakdown_api.py  test_alembic_config.py  test_budget_remaining_api.py  test_budget_setup_api.py  test_categories.py  test_clear_ai_history_api.py  test_dashboard_summary_api.py  test_db_session.py  test_e2e_seed_guard.py  test_health.py  test_llm_provider_interface.py  test_manual_expense_api.py  test_manual_income_api.py  test_money.py  test_ollama_provider.py  test_settings.py  test_soft_delete_transaction_api.py  test_time_ranges.py  test_timezone_month_consistency.py  test_transaction_export_api.py  test_transaction_list_api.py
(+195 files in other folders)
