[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-ledger-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Pocket Ledger AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["fastapi.*", "starlette.*"]
ignore_missing_imports = true
